--- a/pom.xml
+++ b/pom.xml
@@ -112,8 +112,19 @@
             <artifactId>commons-text</artifactId>
             <version>1.9</version>
         </dependency>
+   
 
-    
+        <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-core</artifactId>
+        </dependency>
+         <dependency>
+            <groupId>org.flywaydb</groupId>
+            <artifactId>flyway-database-postgresql</artifactId> 
+
+
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
 
     <build>
