--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,6 @@
-server.port=${PORT:8080}
+spring.profiles.active=${spring-profile}
+spring.application.name=Makepub
+server.port=8085
 logging.level.org.atmosphere = warn
 spring.mustache.check-template-location = false
 
-# Launch the default browser when starting the application in development mode
-vaadin.launch-browser=true
-# PostgreSQL configuration.
-spring.datasource.url = jdbc:postgresql://localhost:5432/makepub2
-spring.datasource.username = postgres
-spring.datasource.password = senha
-#spring.jpa.hibernate.ddl-auto = update
-# To improve the performance during development.
-# For more information https://vaadin.com/docs/latest/integrations/spring/configuration#special-configuration-parameters
-vaadin.allowed-packages = com.vaadin,org.vaadin,com.github.edurbs
-#spring.jpa.defer-datasource-initialization = true
